<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="question"
            type="com.demo.marksupp.database.QuestionRelation" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_bg_gray"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUserImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:imageUrl="@{question.owner.profile_image}"
                android:placeholder="@{@drawable/ic_baseline_supervised_user_circle_24}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@{question.owner.display_name}"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                app:layout_constraintTop_toTopOf="@+id/ivUserImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_39_followers"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tbFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button_blue"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintStart_toEndOf="@+id/appCompatTextView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_turned_in_not_24"
                app:layout_constraintBottom_toBottomOf="@+id/ivUserImage"
                app:layout_constraintEnd_toStartOf="@+id/btnMore"
                app:layout_constraintTop_toTopOf="@+id/ivUserImage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="@+id/ivUserImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivUserImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="all"
                android:text="@{question.question.title}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPostImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:imagePostUrl="@{question.owner.profile_image}"
                android:placeholder="@{@drawable/background_button_blue}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/main_bg_gray_bottom"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_thumb_up_24"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:text="@string/like"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_comment_24"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:text="@string/comment"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/tvShare"
                app:layout_constraintStart_toEndOf="@+id/tvLike"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_share_24"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>